[add] Tabla para ver todas las asistencias registradas

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,12 +1,11 @@
 <main class="main">
   <div class="content">
-    <div class="left-side">
-      
+    <div class="left-side">      
       <app-cargar-archivo></app-cargar-archivo>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
-      
+      <app-tabla-asistencia></app-tabla-asistencia>
     </div>
   </div>
 </main>
