--- a/front/src/app/cargar-archivo/cargar-archivo.component.css
+++ b/front/src/app/cargar-archivo/cargar-archivo.component.css
@@ -25,7 +25,7 @@
     justify-content: center;
 }
 .custom-button { 
-    background-color: #4cafaa; 
+    background-color: rgb(76, 175, 170); 
     color: white; 
     border: none; 
     padding: 10px 20px; 
