[add] unit test frontend

--- a/front/src/app/tabla-asistencia/tabla-asistencia.component.html
+++ b/front/src/app/tabla-asistencia/tabla-asistencia.component.html
@@ -1,28 +1,28 @@
+<button mat-button class="custom-button" (click)="ngOnInit()">Actualizar</button>
 <table cclass="table">
-    <thead>
+  <thead>
+      <tr>
+      <th scope="col">Fecha</th>
+      <th scope="col">Nombre Estudiante</th>
+      <th scope="col">RUT Estudiante</th>
+      <th scope="col">Nombre Asignatura</th>
+      <th scope="col">Sección</th>
+      <th scope="col">Asistencia</th>
+      </tr>
+  </thead>
+  <tbody>
+      @for (registro of asistencias; track registro.id){
         <tr>
-        <th scope="col">Fecha</th>
-        <th scope="col">Nombre Estudiante</th>
-        <th scope="col">RUT Estudiante</th>
-        <th scope="col">Nombre Asignatura</th>
-        <th scope="col">Sección</th>
-        <th scope="col">Asistencia</th>
+          <td>{{ formatDate(registro.fecha) }}</td>
+          <td>{{registro.inscripcion.estudiante.nombres +' '+ registro.inscripcion.estudiante.apellido_paterno + ' ' +registro.inscripcion.estudiante.apellido_materno}}</td>
+          <td>{{registro.inscripcion.estudiante.rut }}</td>
+          <td>{{registro.inscripcion.curso.asignatura.nombre}}</td>
+          <td>{{registro.inscripcion.curso.seccion}} </td>
+          <td> {{ registro.asistencia ? 'Presente' : 'Ausente' }} </td>
+          <br>
         </tr>
-    </thead>
-    <tbody>
-      
-        @for (registro of asistencias; track registro.id){
-          <tr>
-
-            <td>{{ formatDate(registro.fecha) }}</td>
-            <td>{{registro.inscripcion.estudiante.nombres +' '+ registro.inscripcion.estudiante.apellido_paterno + ' ' +registro.inscripcion.estudiante.apellido_materno}}</td>
-            <td>{{registro.inscripcion.estudiante.rut }}</td>
-            <td>{{registro.inscripcion.curso.asignatura.nombre}}</td>
-            <td>{{registro.inscripcion.curso.seccion}} </td>
-            <td> {{ registro.asistencia ? 'Presente' : 'Ausente' }} </td>
-            <br>
-          </tr>
-        }
-    </tbody>
-  </table>
+      }
+  </tbody>
+</table>
+  
   
