--- a/front/src/app/tabla-asistencia/tabla-asistencia.component.css
+++ b/front/src/app/tabla-asistencia/tabla-asistencia.component.css
@@ -33,3 +33,16 @@ table {
   
 
   
+.custom-button { 
+  background-color: rgb(76, 175, 170); 
+  color: white; 
+  border: none; 
+  padding: 10px 20px; 
+  border-radius: 5px; 
+  cursor: pointer;
+  text-align: center; 
+  margin-bottom: 20px;
+}
+.custom-button:hover {
+  background-color: #340dc3;
+}
